--- a/drivers/scsi/Kconfig
+++ b/drivers/scsi/Kconfig
@@ -953,6 +953,17 @@ config SCSI_ZALON
 	  used on the add-in Bluefish, Barracuda & Shrike SCSI cards.
 	  Say Y here if you have one of these machines or cards.
 
+config SCSI_NCR_Q720
+	tristate "NCR Quad 720 MCA SCSI support"
+	depends on MCA && SCSI
+	help
+	  This is a driver for the MicroChannel Quad 720 card produced by
+	  NCR and commonly used in 345x/35xx/4100 class machines.  It always
+	  tries to negotiate sync and uses tag command queueing.
+
+	  Unless you have an NCR manufactured machine, the chances are that
+	  you do not have this SCSI card, so say N.
+
 config SCSI_SYM53C8XX
 	tristate "SYM53C8XX SCSI support"
 	depends on PCI && SCSI_SYM53C8XX_2!=y && SCSI
