[PATCH] x86-64 merge for 2.5.73-bk9
- Update defconfig
- Merge with i386
- Make oprofile compile again
- Warning fixes
- Minor changes for 32bit SYSCALL path (still disabled)
- Remove obsolete FS/GS symbols in ptrace.h

--- a/arch/x86_64/oprofile/Makefile
+++ b/arch/x86_64/oprofile/Makefile
@@ -15,7 +15,7 @@ DRIVER_OBJS = $(addprefix ../../../drivers/oprofile/, \
 oprofile-objs := $(DRIVER_OBJS) init.o
 
 oprofile-$(CONFIG_X86_LOCAL_APIC) += nmi_int.o op_model_athlon.o
- 
+oprofile-$(CONFIG_X86_IO_APIC)          += nmi_timer_int.o 
 INCL := $(obj)/op_counter.h $(obj)/op_x86_model.h
 
 $(obj)/nmi_int.c: ${INCL}
@@ -24,9 +24,11 @@ $(obj)/op_model_athlon.c: ${INCL}
 	@ln -sf ../../i386/oprofile/op_model_athlon.c $(obj)/op_model_athlon.c
 $(obj)/init.c: ${INCL}
 	@ln -sf ../../i386/oprofile/init.c $(obj)/init.c
+$(obj)/nmi_timer_int.c: ${INCL}
+	@ln -sf ../../i386/oprofile/nmi_timer_int.c $(obj)/nmi_timer_int.c
 $(obj)/op_counter.h: 
 	@ln -sf ../../i386/oprofile/op_counter.h $(obj)/op_counter.h
 $(obj)/op_x86_model.h:
 	@ln -sf ../../i386/oprofile/op_x86_model.h $(obj)/op_x86_model.h	
 clean-files += op_x86_model.h op_counter.h init.c \
-	       op_model_athlon.c nmi_int.c
+	       op_model_athlon.c nmi_int.c nmi_timer_int.c
