Remove the Zynx 4500 platform code.  It was old and unmaintained. This change can also be found in patch form at: ftp://source.mvista.com/pub/linuxppc/obsolete/zx4500/

--- a/arch/ppc/Kconfig
+++ b/arch/ppc/Kconfig
@@ -490,9 +490,6 @@ config GEMINI
 	  series Single Board Computer.  More information is available at:
 	  <http://www.synergymicro.com/PressRel/97_10_15.html>.
 
-config ZX4500
-	bool "Zynx-ZX4500"
-
 endchoice
 
 config PPC_CHRP
@@ -536,7 +533,7 @@ config WILLOW
 
 config MPC10X_STORE_GATHERING
 	bool "Enable MPC10x store gathering"
-	depends on FORCE || MENF1 || SANDPOINT || ZX4500
+	depends on FORCE || MENF1 || SANDPOINT
 
 config GT64260
 	bool
@@ -1528,7 +1525,7 @@ config BOOTX_TEXT
 
 config SERIAL_TEXT_DEBUG
 	bool "Support for early boot texts over serial port"
-	depends on 4xx || GT64260 || LOPEC || MCPN765 || PPLUS || PRPMC800 || SANDPOINT || ZX4500
+	depends on 4xx || GT64260 || LOPEC || MCPN765 || PPLUS || PRPMC800 || SANDPOINT
 
 config OCP
 	bool
