[PATCH] Mark taskfile EXPERIMENTAL again
Okay, since now corruption happens and there are some other issues to be
resolved ("bad: scheduling while atomic" and "/proc/ide/hdX/identify")
better set it by default to n for 2.5.74, also mark it EXPERIMENTAL.

--- a/drivers/ide/Kconfig
+++ b/drivers/ide/Kconfig
@@ -277,9 +277,9 @@ config IDE_TASK_IOCTL
 	  If you are unsure, say N here.
 
 config IDE_TASKFILE_IO
-	bool 'IDE Taskfile IO'
-	depends on BLK_DEV_IDE
-	default y
+	bool 'IDE Taskfile IO (EXPERIMENTAL)'
+	depends on BLK_DEV_IDE && EXPERIMENTAL
+	default n
 	---help---
 	  Use new taskfile IO code.
 
