[PATCH] ia64: SN2 updates
Patch against latest BK (as of July 3) contains the following fixes
and updates:

- Generic kernel tweaks for SN (use of ia64_platform_is)
- Fix some error return values.
- Fix for IO port space on SN (fixes slow console, return
  immediately when probing IO addresses < 64K)
- Fixes to keep hwgraph up to date
- Clean-up/remove early prototype code.
- PCI bridge RRB tweaks
- Support for changing memory protections and registering
  nofault ranges.
- Other miscellaneous bug fixes.

--- a/arch/ia64/sn/io/Makefile
+++ b/arch/ia64/sn/io/Makefile
@@ -11,5 +11,5 @@
 
 EXTRA_CFLAGS    := -DLITTLE_ENDIAN
 
-obj-y += sgi_if.o xswitch.o sgi_io_sim.o cdl.o ate_utils.o \
+obj-y += sgi_if.o xswitch.o sgi_io_sim.o cdl.o \
 	 io.o machvec/ drivers/ platform_init/ sn2/ hwgfs/
