[PATCH] ARM26 architecture update

--- a/arch/arm26/kernel/Makefile
+++ b/arch/arm26/kernel/Makefile
@@ -6,7 +6,7 @@ ENTRY_OBJ = entry.o
 
 # Object file lists.
 
-obj-y		:= arch.o compat.o dma.o entry.o irq.o   \
+obj-y		:= compat.o dma.o entry.o irq.o   \
 		   process.o ptrace.o semaphore.o setup.o signal.o sys_arm.o \
 		   time.o traps.o ecard.o time-acorn.o dma.o \
 		   ecard.o fiq.o time.o
