--- a/arch/arm26/lib/Makefile
+++ b/arch/arm26/lib/Makefile
@@ -4,9 +4,7 @@
 # Copyright (C) 1995-2000 Russell King
 #
 
-L_TARGET	:= lib.a
-
-obj-y		:= backtrace.o changebit.o csumipv6.o csumpartial.o   \
+lib-y		:= backtrace.o changebit.o csumipv6.o csumpartial.o   \
 		   csumpartialcopy.o csumpartialcopyuser.o clearbit.o \
 		   copy_page.o delay.o findbit.o memchr.o memcpy.o    \
 		   memset.o memzero.o setbit.o    \
@@ -16,15 +14,12 @@ obj-y		:= backtrace.o changebit.o csumipv6.o csumpartial.o   \
 		   ucmpdi2.o udivdi3.o lib1funcs.o ecard.o io-acorn.o \
 		   floppydma.o io-readsb.o io-writesb.o io-writesl.o  \
 		   uaccess-kernel.o uaccess-user.o io-readsw-armv3.o  \
-		   io-writesw-armv3.o io-readsl-armv3.o
+		   io-writesw-armv3.o io-readsl-armv3.o ecard.o       \
+		   io-acorn.o floppydma.o
 
-obj-m		:=
-obj-n		:=
+lib-n		:=
 
-obj-$(CONFIG_VT)+= kbd.o
-
-obj-y		+= ecard.o io-acorn.o floppydma.o
-
+lib-$(CONFIG_VT)+= kbd.o
 
 csumpartialcopy.o: csumpartialcopygeneric.S
 csumpartialcopyuser.o: csumpartialcopygeneric.S
