--- a/drivers/net/irda/Kconfig
+++ b/drivers/net/irda/Kconfig
@@ -22,6 +22,7 @@ comment "Dongle support"
 
 config DONGLE
 	bool "Serial dongle support"
+	depends on IRTTY_SIR
 	help
 	  Say Y here if you have an infrared device that connects to your
 	  computer's serial port. These devices are called dongles. Then say Y
@@ -69,7 +70,7 @@ comment "Old SIR device drivers"
 
 config IRTTY_OLD
 	tristate "Old IrTTY (broken)"
-	depends on IRDA
+	depends on IRDA && EXPERIMENTAL
 	help
 	  Say Y here if you want to build support for the IrTTY line
 	  discipline.  If you want to compile it as a module (irtty), say M
@@ -102,6 +103,7 @@ comment "Old Serial dongle support"
 
 config DONGLE_OLD
 	bool "Old Serial dongle support"
+	depends on IRTTY_OLD || IRPORT_SIR
 	help
 	  Say Y here if you have an infrared device that connects to your
 	  computer's serial port. These devices are called dongles. Then say Y
@@ -226,8 +228,8 @@ config MA600_DONGLE
 comment "FIR device drivers"
 
 config USB_IRDA
-	tristate "IrDA USB dongles (EXPERIMENTAL)"
-	depends on IRDA && USB && EXPERIMENTAL
+	tristate "IrDA USB dongles"
+	depends on IRDA && USB
 	---help---
 	  Say Y here if you want to build support for the USB IrDA FIR Dongle
 	  device driver.  If you want to compile it as a module (irda-usb),
@@ -243,7 +245,7 @@ config USB_IRDA
 
 config NSC_FIR
 	tristate "NSC PC87108/PC87338"
-	depends on IRDA
+	depends on IRDA && ISA
 	help
 	  Say Y here if you want to build support for the NSC PC87108 and
 	  PC87338 IrDA chipsets.  This driver supports SIR,
@@ -255,7 +257,7 @@ config NSC_FIR
 
 config WINBOND_FIR
 	tristate "Winbond W83977AF (IR)"
-	depends on IRDA
+	depends on IRDA && ISA
 	help
 	  Say Y here if you want to build IrDA support for the Winbond
 	  W83977AF super-io chipset.  This driver should be used for the IrDA
@@ -295,7 +297,7 @@ config AU1000_FIR
 
 config SMC_IRCC_OLD
 	tristate "SMC IrCC (old driver) (EXPERIMENTAL)"
-	depends on EXPERIMENTAL && IRDA
+	depends on EXPERIMENTAL && IRDA && ISA
 	help
 	  Say Y here if you want to build support for the SMC Infrared
 	  Communications Controller.  It is used in the Fujitsu Lifebook 635t
@@ -307,7 +309,7 @@ config SMC_IRCC_OLD
 
 config SMC_IRCC_FIR
 	tristate "SMSC IrCC (EXPERIMENTAL)"
-	depends on EXPERIMENTAL && IRDA
+	depends on EXPERIMENTAL && IRDA && ISA
 	help
 	  Say Y here if you want to build support for the SMC Infrared
 	  Communications Controller.  It is used in a wide variety of
@@ -318,7 +320,7 @@ config SMC_IRCC_FIR
 
 config ALI_FIR
 	tristate "ALi M5123 FIR (EXPERIMENTAL)"
-	depends on EXPERIMENTAL && IRDA
+	depends on EXPERIMENTAL && IRDA && ISA
 	help
 	  Say Y here if you want to build support for the ALi M5123 FIR
 	  Controller.  The ALi M5123 FIR Controller is embedded in ALi M1543C,
