[PATCH] make clean should remove usr/initramfs_data.S
The kernel build leaves a temp file in linux/usr/ that make clean
doesn't remove.  Fixed in the patch below.

--- a/usr/Makefile
+++ b/usr/Makefile
@@ -3,7 +3,7 @@ obj-y := initramfs_data.o
 
 host-progs  := gen_init_cpio
 
-clean-files := initramfs_data.cpio.gz
+clean-files := initramfs_data.cpio.gz initramfs_data.S
 
 $(src)/initramfs_data.S: $(obj)/initramfs_data.cpio.gz
 	echo "	.section .init.ramfs,\"a\"" > $(src)/initramfs_data.S
