--- a/drivers/block/Kconfig
+++ b/drivers/block/Kconfig
@@ -339,7 +339,7 @@ config BLK_DEV_INITRD
 
 config LBD
 	bool "Support for Large Block Devices"
-	depends on X86
+	depends on X86 || MIPS32 || PPC32 || ARCH_S390_31 || SUPERH
 	help
 	  Say Y here if you want to attach large (bigger than 2TB) discs to
 	  your machine, or if you want to have a raid or loopback device
