--- a/drivers/block/Kconfig
+++ b/drivers/block/Kconfig
@@ -264,6 +264,7 @@ config BLK_DEV_LOOP
 
 config BLK_DEV_CRYPTOLOOP
 	tristate "Cryptoloop Support"
+	select CRYPTO
 	depends on BLK_DEV_LOOP
 	---help---
 	  Say Y here if you want to be able to use the ciphers that are 
