[PATCH] dm: v4 ioctl interface
From: Joe Thornber <thornber@sistina.com>

v4 of the ioctl interface.  Note there never was a v2 or a v3 except in an
unofficial EVMS way.

This works correctly with the 64-bit dev_t patches in -mm kernels.

There is now a config option to allow the user to select v1 or v4, it
defaults to v1.  dm-ioctl.[hc] just #includes dm-ioctl-v[14].[hc] depending
on the config option.

If you want to use v4 you will have to update your tools
(libdevmapper/lvm).  The latest tools at the time of writing are:

dmsetup + libdevmapper + replacement kernel patches for 2.4.20 & 2.4.21:

  ftp://ftp.sistina.com/pub/LVM2/device-mapper/device-mapper-testing-new-version4-interface.tgz

Updated LVM2 tools to work with the above:

  ftp://ftp.sistina.com/pub/LVM2/tools/LVM2.0-testing.tgz

--- a/drivers/md/Kconfig
+++ b/drivers/md/Kconfig
@@ -145,5 +145,12 @@ config BLK_DEV_DM
 
 	  If unsure, say N.
 
+config DM_IOCTL_V4
+	bool "ioctl interface version 4"
+	depends on BLK_DEV_DM
+	---help---
+	  Recent tools use a new version of the ioctl interface, only
+          select this option if you intend using such tools.
+
 endmenu
 
